# shigunaru

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: signal_benchmark.rs
examples/: counter.rs
src/: computed.rs  effect.rs  lib.rs  main.rs  registry.rs  signal.rs
src/tests/: computed_tests.rs  mod.rs  signal_tests.rs
